Se realizan los ejercicios :3

--- a/ejercicios/1_tipos_de_datos.ipynb
+++ b/ejercicios/1_tipos_de_datos.ipynb
@@ -19,9 +19,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¡Hola Mundo!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solución\n"
+    "# Solución\n",
+    "print (\"¡Hola Mundo!\")\n"
    ]
   },
   {
@@ -36,9 +45,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¡Hola Mundo!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solución"
+    "# Solución\n",
+    "cadena = (\"¡Hola Mundo!\")\n",
+    "print(cadena)\n"
    ]
   },
   {
@@ -53,9 +72,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¡Hola ara!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solución"
+    "# Solución\n",
+    "nombre= input(\"Intoduce tu nombre, por favor. \")\n",
+    "saludo = (\"¡Hola \"+ nombre+\"!\")\n",
+    "print(saludo)"
    ]
   },
   {
@@ -71,9 +101,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.25\n"
+     ]
+    }
+   ],
    "source": [
-    "# solución"
+    "# solución\n",
+    "operacion =(((3+2)/(2*5))**2)\n",
+    "print (operacion)"
    ]
   },
   {
@@ -88,9 +128,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.2\n"
+     ]
+    }
+   ],
    "source": [
-    "# solución"
+    "# solución\n",
+    "horasTrabajadas = input(\"Ingresa las horas trabajadas, por favor.\")\n",
+    "costoPorHora = input(\"Ingresa el pago por hora, por favor.\")\n",
+    "pago = (int(horasTrabajadas)*float(costoPorHora))\n",
+    "print(pago)"
    ]
   },
   {
@@ -104,11 +156,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# solución"
+    "# solución\n",
+    "numero = int(input(\"Ingresa un numero entero positivo, por favor.\"))\n",
+    "suma =((numero)*(numero+1)/2)\n",
+    "print (suma)"
    ]
   },
   {
@@ -121,11 +184,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tu indice de masa corporal es:  27.68\n"
+     ]
+    }
+   ],
    "source": [
-    "# solución\n"
+    "# solución\n",
+    "peso = float(input(\"Ingresa tu peso en Kg, por favor.\"))\n",
+    "estatura = float(input(\"Ingresa tu estatura en metros, por favor.\"))\n",
+    "imc= (peso/(estatura)**2)\n",
+    "print (\"Tu indice de masa corporal es: \" , round(imc,2))"
    ]
   },
   {
@@ -138,11 +213,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El  5.0  entre  2.0  da un cociente  2.0  y un resto  1.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# solución"
+    "# solución\n",
+    "n = float(input(\"Ingresa el primer numero: \"))\n",
+    "m = float(input(\"Ingresa el segundo numero: \"))\n",
+    "c = (n//m)\n",
+    "r= n%m\n",
+    "print (\"El \", n , \" entre \", m, \" da un cociente \", c , \" y un resto \", r)\n",
+    "\n"
    ]
   },
   {
@@ -155,11 +244,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Capital de la inversion:  $ 10.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solución"
+    "# Solución\n",
+    "inversion = float(input(\"Ingresa la cantidad a invertir: \"))\n",
+    "interes = float(input(\"Ingresa el porcentaje de interes anual %: \"))\n",
+    "p_interes = interes/100\n",
+    "años = int(input(\"Ingresa los años a invertir: \"))\n",
+    "capital =(inversion*p_interes*años)\n",
+    "print (\"Capital de la inversion: \", \"$\",capital)"
    ]
   },
   {
@@ -172,11 +275,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.94 g.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solución"
+    "# Solución\n",
+    "payaso = int(input(\"Ingresa la cantidad de payasos: \"))\n",
+    "muñeca = int(input(\"Ingresa la cantida de muñecas: \"))\n",
+    "peso = ((payaso*0.112)+(muñeca*0.075))\n",
+    "print(round(float(peso),4), \"g.\")"
    ]
   },
   {
@@ -189,11 +304,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Dev\\Python\\primerRepositorioEC\\ejercicios\\1_tipos_de_datos.ipynb Celda 23\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Dev/Python/primerRepositorioEC/ejercicios/1_tipos_de_datos.ipynb#X31sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Solución\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Dev/Python/primerRepositorioEC/ejercicios/1_tipos_de_datos.ipynb#X31sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m ahorro \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39m(\u001b[39minput\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39mIngresa la cantidad a ahorrar: $\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Dev/Python/primerRepositorioEC/ejercicios/1_tipos_de_datos.ipynb#X31sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m interes1 \u001b[39m=\u001b[39m (\u001b[39m.04\u001b[39m\u001b[39m*\u001b[39mahorro)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Dev/Python/primerRepositorioEC/ejercicios/1_tipos_de_datos.ipynb#X31sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m interes2 \u001b[39m=\u001b[39m (\u001b[39m.04\u001b[39m\u001b[39m*\u001b[39m(ahorro\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m))\n",
+      "File \u001b[1;32mc:\\Users\\Esc_código\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ipykernel\\kernelbase.py:1177\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1173\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_allow_stdin:\n\u001b[0;32m   1174\u001b[0m     \u001b[39mraise\u001b[39;00m StdinNotImplementedError(\n\u001b[0;32m   1175\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1176\u001b[0m     )\n\u001b[1;32m-> 1177\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_input_request(\n\u001b[0;32m   1178\u001b[0m     \u001b[39mstr\u001b[39;49m(prompt),\n\u001b[0;32m   1179\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_parent_ident[\u001b[39m\"\u001b[39;49m\u001b[39mshell\u001b[39;49m\u001b[39m\"\u001b[39;49m],\n\u001b[0;32m   1180\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_parent(\u001b[39m\"\u001b[39;49m\u001b[39mshell\u001b[39;49m\u001b[39m\"\u001b[39;49m),\n\u001b[0;32m   1181\u001b[0m     password\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[0;32m   1182\u001b[0m )\n",
+      "File \u001b[1;32mc:\\Users\\Esc_código\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ipykernel\\kernelbase.py:1219\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1216\u001b[0m             \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m   1217\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1218\u001b[0m     \u001b[39m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[1;32m-> 1219\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mInterrupted by user\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[0;32m   1220\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m:\n\u001b[0;32m   1221\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlog\u001b[39m.\u001b[39mwarning(\u001b[39m\"\u001b[39m\u001b[39mInvalid Message:\u001b[39m\u001b[39m\"\u001b[39m, exc_info\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+     ]
+    }
+   ],
    "source": [
-    "# Solución"
+    "# Solución\n",
+    "ahorro = float(input(\"Ingresa la cantidad a ahorrar: $\"))\n",
+    "interes = (.04*ahorro)\n",
+    "interes1 = round((ahorro - (interes)),2)\n",
+    "interes2 = round((((ahorro - interes)+ahorro) -(interes)),2)\n",
+    "interes3 = round(((ahorro*3) -(interes)),2)\n",
+    "print()\n"
    ]
   },
   {
@@ -216,7 +351,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3.10.5 64-bit (system)",
    "language": "python",
    "name": "python3"
   },
@@ -230,12 +365,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9524c4952dd211fec7df7c73b3afac2dbc89a267f70352ce6257a0999e7cce99"
+    "hash": "77abe205c72c096294b3a4a26264acecc5dbf8fb16ba6ed375b92e4d65784221"
    }
   }
  },
