Parcticas bucles y tema Lista

--- a/ejercicios/3_bucles.ipynb
+++ b/ejercicios/3_bucles.ipynb
@@ -18,41 +18,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "2\n",
-      "8\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "Interrupted by user",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Dev\\primerRepositorioEC\\ejercicios\\3_bucles.ipynb Celda 3\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Dev/primerRepositorioEC/ejercicios/3_bucles.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Solución\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Dev/primerRepositorioEC/ejercicios/3_bucles.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Dev/primerRepositorioEC/ejercicios/3_bucles.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     numero \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(\u001b[39minput\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39mingresa un número\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Dev/primerRepositorioEC/ejercicios/3_bucles.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mif\u001b[39;00m(numero \u001b[39m%\u001b[39m \u001b[39m2\u001b[39m \u001b[39m==\u001b[39m\u001b[39m0\u001b[39m):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Dev/primerRepositorioEC/ejercicios/3_bucles.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m         suma \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m \u001b[39m+\u001b[39m numero\n",
-      "File \u001b[1;32mc:\\Users\\Esc_código\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ipykernel\\kernelbase.py:1177\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1173\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_allow_stdin:\n\u001b[0;32m   1174\u001b[0m     \u001b[39mraise\u001b[39;00m StdinNotImplementedError(\n\u001b[0;32m   1175\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1176\u001b[0m     )\n\u001b[1;32m-> 1177\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_input_request(\n\u001b[0;32m   1178\u001b[0m     \u001b[39mstr\u001b[39;49m(prompt),\n\u001b[0;32m   1179\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_parent_ident[\u001b[39m\"\u001b[39;49m\u001b[39mshell\u001b[39;49m\u001b[39m\"\u001b[39;49m],\n\u001b[0;32m   1180\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_parent(\u001b[39m\"\u001b[39;49m\u001b[39mshell\u001b[39;49m\u001b[39m\"\u001b[39;49m),\n\u001b[0;32m   1181\u001b[0m     password\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[0;32m   1182\u001b[0m )\n",
-      "File \u001b[1;32mc:\\Users\\Esc_código\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ipykernel\\kernelbase.py:1219\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1216\u001b[0m             \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m   1217\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1218\u001b[0m     \u001b[39m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[1;32m-> 1219\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mInterrupted by user\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[0;32m   1220\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m:\n\u001b[0;32m   1221\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlog\u001b[39m.\u001b[39mwarning(\u001b[39m\"\u001b[39m\u001b[39mInvalid Message:\u001b[39m\u001b[39m\"\u001b[39m, exc_info\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+      "Promedio par =  2.0\n",
+      "Promedio impar =  1.0\n"
      ]
     }
    ],
    "source": [
     "# Solución\n",
+    "sumaPar = 0\n",
+    "sumaImpar=0\n",
+    "contPar=0\n",
+    "contImpar = 0\n",
     "for i in range(10):\n",
-    "    numero = int(input(\"ingresa un número\"))\n",
-    "    if(numero % 2 ==0):\n",
-    "        suma = 0 + numero\n",
-    "        sumaPar = suma\n",
-    "        print(sumaPar)\n",
-    "        \n"
+    "    numero = int(input(f'''ingresa un número {i+1}'''))\n",
+    "    if(numero % 2 == 0):\n",
+    "        sumaPar = sumaPar + numero\n",
+    "        contPar+=1\n",
+    "    else:\n",
+    "        sumaImpar = sumaImpar + numero\n",
+    "        contImpar+=1\n",
+    "\n",
+    "if(contPar==0):\n",
+    "    print(\"Error no se tiene ningun numero PAR para obtener el promedio \")\n",
+    "    promedioImpar = sumaPar/contPar\n",
+    "    print(f'''Promedio par =  {promedioImpar}''')\n",
+    "elif(contImpar==0):\n",
+    "    print(\"Error no se tiene ningun numero IMPAR para obtener el promedio \")\n",
+    "    promedioPar = sumaPar/contPar\n",
+    "    print(f'''Promedio impar = {promedioPar}''')\n",
+    "else:\n",
+    "    promedioPar = sumaPar/contPar\n",
+    "    print(f'''Promedio par =  {promedioPar}''')\n",
+    "    promedioImpar = sumaImpar/contImpar\n",
+    "    print(f'''Promedio impar =  {promedioImpar}''')\n"
    ]
   },
   {
@@ -65,11 +70,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "La suma de los 2 numeros es = 3\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solución"
+    "# Solución\n",
+    "suma = 0\n",
+    "numero = 0\n",
+    "cantidadN = int(input(\"Ingresa la cantidad de numeros ENTEROS a Sumar: \"))\n",
+    "\n",
+    "for i in range(cantidadN):\n",
+    "    numero = int(input(f''' Ingresa el {i+1}° numero'''))\n",
+    "    suma = suma+numero\n",
+    "    print(numero)\n",
+    "\n",
+    "print(f'''La suma de los {cantidadN} numeros es = {suma}''')"
    ]
   },
   {
@@ -82,11 +107,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El estado C con numero de ciudad 5 tiene un total de mayor pobación 999\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solución"
+    "# Solución\n",
+    "estados = 3\n",
+    "ciudades = 11\n",
+    "estMax = 0\n",
+    "pobMax = 0\n",
+    "poblacion = 0\n",
+    "\n",
+    "for estados in range(1, 4):\n",
+    "    if(estados == 1):\n",
+    "        estado = \"A\"\n",
+    "    elif(estados == 2):\n",
+    "        estado = \"B\"\n",
+    "    else:\n",
+    "        estado = \"C\"\n",
+    "    for ciudades in range(1, 12):\n",
+    "        poblacion = int(input(f'''Ingresa la cantidad de poblacion del estado {estados} y ciudad numero {ciudades}'''))\n",
+    "        if(poblacion > pobMax):\n",
+    "            pobMax = poblacion\n",
+    "            ciuMax = ciudades\n",
+    "            estMax = estado\n",
+    "                \n",
+    "print(f'''El estado {estMax} con numero de ciudad {ciuMax} tiene un total de mayor población {pobMax}''' )\n",
+    "                "
    ]
   },
   {
@@ -103,7 +158,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solución"
+    "# Solución\n",
+    "\n",
+    "multiplicando = 9\n",
+    "multiplicador = 9\n",
+    "\n",
+    "for multiplicando in range(1,10):\n",
+    "    for miltiplicador in range"
    ]
   },
   {
